fixed some stuff on some stuff && plus "Hello Kitty"

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,7 +2,6 @@ extends ../layout/base
 
 block vars
   - var title = 'Главная';
-  - var active = 'Главная';
 
 block page-content
-  h1='Hello world!!'
+  h1='Hello kitty!'
