coding header(html)

--- a/site/web/app/themes/sage/assets/styles/common/_variables.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_variables.scss
@@ -1,3 +1,8 @@
 // Grid settings
-$main-sm-columns:       12;
-$sidebar-sm-columns:    4;
+$main-sm-columns:                     12;
+$sidebar-sm-columns:                   4;
+$primary-color:                  #222548;
+$primary-text-color:               black;
+$primary-background-color:         white;
+$secondary-text-color:             white;
+$secondary-background-color:       $primary-color;
