--- a/site/web/app/themes/sage/style.css
+++ b/site/web/app/themes/sage/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            8.5.3
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         Battle Brothers Theme
+Theme URI:          http://www.bbratstvo.com
+Description:        Battle Brothers Theme is theme for . <a href="http://www.bbratstvo.com">bbratstvo.com</a>
+Version:            0.0.1
+Author:             Ichiro18
+Author URI:         https://github.com/ichiro18
 Text Domain:        sage
 
 License:            MIT License
