--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -8,18 +8,29 @@
     margin-top: 25px;
     margin-bottom: 25px;
   }
-  .main-content{
-    max-width: 100%;
-    float: left;
-    ul.child-nav{
-      padding-left: 0;
-      li{
-        list-style: none;
-        margin-bottom: 1em;
-        a{
-          text-decoration: underline;
+  .page-description{
+    p {
+      font-weight: bold;
+      margin-bottom: 1em;
+    }
+  }
+  .page-wrapper{
+    .main-content {
+      max-width: 100%;
+      float: left;
+      ul.child-nav {
+        padding-left: 0;
+        li {
+          list-style: none;
+          margin-bottom: 1em;
+          a {
+            text-decoration: underline;
+          }
         }
       }
+    }
+    .main-content.active-sidebar{
+      max-width: calc(100% - 350px);
     }
   }
 }
