--- a/site/web/app/themes/sage/assets/styles/layouts/_posts.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_posts.scss
@@ -55,4 +55,18 @@
       }
     }
   }
+  .post-single{
+    .post-image{
+      img{
+        max-width: 100%;
+        margin-bottom: 20px;
+      }
+    }
+    .post-date{
+      font-size: 12px;
+      color: #979797;
+      text-align: right;
+      margin-bottom: 15px;
+    }
+  }
 }
