--- a/site/web/app/themes/sage/assets/styles/layouts/_sidebar.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_sidebar.scss
@@ -17,5 +17,39 @@
         margin-top: 10px;
       }
     }
+    .widget_recent_entries{
+      ul{
+        display: flex;
+        flex-direction: column;
+        background: #fff;
+        border: 1px solid #ebebeb;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        li{
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          border-bottom: 1px solid #ebebeb;
+          padding: 25px;
+          a{
+            color: black;
+            line-height: 18px;
+            font-weight: bold;
+            text-decoration: none;
+            &:hover{
+              text-decoration: underline;
+            }
+          }
+          span.post-date{
+            font-size: 12px;
+            color: #979797;
+            text-align: right;
+            margin-bottom: 15px;
+          }
+        }
+      }
+    }
   }
 }
